[package]
name = "ghost_chat"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/ghost_chat"
repository = "https://github.com/celeo/ghost_chat"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = []

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
clap = { version = "4.3.4", features = ["derive"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
